--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -16,9 +16,17 @@
 h1{
     text-transform: capitalize;
     color: bisque;
-
-
+    transition: filter 0.3s ease;
+}
+h1:hover{
+    filter:blur(5px);
 }
 p{
     text-transform: lowercase;
+}
+.photo{
+    transition: filter 0.3s ease;
+}
+.photo:hover{
+    filter: blur(5px);
 }
