--- a/6.5 position/style.css
+++ b/6.5 position/style.css
@@ -18,7 +18,7 @@ img{
     height: 100px;
     border:2px solid lightblue;
     color: red;
-    background-color:blueviolet;
+    background-color:rgb(147, 96, 194);
     border-radius: 20px;
     text-align: center;
 }
