--- a/6.6 image Gallary/style.css
+++ b/6.6 image Gallary/style.css
@@ -1,11 +1,27 @@
+#heading{
+    background-color: #cabdbd;
+    color: #fff;      
+    font-size: 70px;  
+    white-space: nowrap;
+    margin: 20px auto;
+    animation: breking;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+
+}
+
+@keyframes breking{
+    from{margin-left: 100%;}
+    to{margin-left: -220%;}
+}
 body {
-    background: #111;
+    background-color: rgb(0, 0, 0);
     min-height: 100vh;
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column; /* stack heading above gallery */
+    align-items: center;    /* center horizontally */
 }
 .gallary {
     width: 90%;
