--- a/7.0 flex box/s.css
+++ b/7.0 flex box/s.css
@@ -31,6 +31,16 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    border: 20px solid blue;
-    border-top:20px solid black;
+    border: 20px solid #ffe66d;
+    border-top:20px solid #4ecdc4;
+    animation:spin 3s ease-in 0s infinite normal;
+}
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+    
 }
